Backend updates - Reformat links to remove whitespace - Little bug fixes - Style tweaks - Stop table breaking out of page - Fix link styling when not in rich text component

--- a/public/app/frontend/base.scss
+++ b/public/app/frontend/base.scss
@@ -34,10 +34,6 @@ h6, .h6 {
     @include h6;
 }
 
-a, .link {
-    @include link;
-}
-
 ul {
     list-style: none;
     margin: 0;
