--- a/public/app/frontend/src/layouts/one-sidebar/one-sidebar.scss
+++ b/public/app/frontend/src/layouts/one-sidebar/one-sidebar.scss
@@ -14,6 +14,7 @@
     }
 
     &__article-header {
+        width: 100%;
         > * {
             @include spacing('margin', 4, 'top');
         }
@@ -24,6 +25,7 @@
     }
 
     &__article-content {
+        width: 100%;
         > * {
             @include spacing('margin', 8, 'top');
         }
